--- a/app/src/main/res/values-es-rCO/strings.xml
+++ b/app/src/main/res/values-es-rCO/strings.xml
@@ -3,4 +3,9 @@
     <string name="app_name">MessageZemoga</string>
     <string name="title_post">Publicaciones</string>
     <string name="title_favorites">Favoritos</string>
+    <string name="delete_post">Eliminar publicaciones</string>
+    <string name="tv_title_post">Titulo publicación</string>
+    <string name="body_post">Cuerpo publicación</string>
+    <string name="set_favorite_post">Marcar como favorito</string>
+    <string name="post_unread">Publicación sin leer</string>
 </resources>
